--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -10,9 +10,12 @@
 		.views-exposed-widget {
 			display: inline-block;
 			float: none;
+			min-width: 0;
+			max-width: 100%;
 
 			.form-item {
 				input, select {
+					min-width: 0;
 					max-width: 100%;
 				}
 			}
@@ -69,6 +72,8 @@
 		.sidebar-content {
 			flex: 1 1 0;
 		    margin: 0.5em;
+		    min-width: 0;
+		    max-width: 100%;
 
 		    @include breakpoint(375px) {
 				min-width: 300px;
